style: added css variables

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --purple: #6935d3;
   --darkBule: #192951;
   --teal: #1ad3c5;
+  --lightTeal: #bbf2ee;
   --otherPurple: #6639a6;
   --black: #000;
   --white: #fff;
