--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -42,14 +42,60 @@ header .logo span {
 }
 
 .btn-primary {
-  background: #1ad3c5;
+  background: var(--teal);
 }
 
 .btn-primary:hover {
-  background: #bbf2ee;
-  color: black;
+  background: var(--lightTeal);
+  color: var(--black);
 }
 
 header .btns .btn {
   margin: 0 10px;
+}
+
+/* HERO */
+
+#hero {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.hero-left {
+  display: block;
+  padding: 2rem;
+}
+
+.hero-left p {
+  color: #999;
+  font-weight: bold;
+}
+
+.hero-left h5 {
+  color: #888;
+  font-size: 1rem;
+}
+
+.hero-left h5::before {
+  content: '\f111';
+  font-family: 'Font Awesome 5 Free';
+  margin-right: 5px;
+  color: var(--purple);
+}
+
+.hero-title {
+  margin: 1rem 0;
+  font-size: 2.8em;
+  color: var(--secondary);
+  line-height: 1.2;
+}
+
+#hero .btn {
+  margin: 1rem 0;
+  border: 2px solid var(--primary);
+}
+
+#hero .btn-primary:hover {
+  border-color: var(--secondary);
 }
