--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -60,6 +60,7 @@ header .btns .btn {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 80vh;
 }
 
 .hero-left {
