--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -100,3 +100,73 @@ header .btns .btn {
 #hero .btn-primary:hover {
   border-color: var(--lightTeal);
 }
+
+/* Media Queries */
+@media (max-width: 1000px) {
+  header {
+    flex-direction: column;
+  }
+
+  -header-left {
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+
+  .header-logo {
+    margin-bottom: 1rem;
+  }
+
+  #hero {
+    flex-direction: column;
+  }
+
+  .hero-left {
+    text-align: center;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  header .btns {
+    margin: 0 1rem;
+  }
+
+  header .btns .btn {
+    margin: 0.5rem;
+  }
+
+  header .btns .btn-secondary {
+    background: var(--secondary);
+    color: var(--dark);
+  }
+
+  header .btns .btn-secondary:hover {
+    color: #fff;
+    background: var(--dark);
+  }
+}
+
+/* @media (max-width: 950px) {
+  footer {
+    flex-direction: column;
+  }
+
+  #hero .left .title {
+    font-size: 2em;
+  }
+
+  #hero .left p {
+    font-size: 14px;
+    text-align: justify-center;
+    margin-bottom: 1rem;
+  }
+
+  #hero img {
+    width: 300px;
+  }
+
+  #hero .btn {
+    margin: 0.5rem;
+  }
+} */
